BAEL-7340 Using Custom TrustStore in Java